--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.3.5",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.35.0",
     "crypto": "^1.0.1",
     "date-format": "^4.0.14",
     "dateformat": "^5.0.3",
@@ -23,6 +24,8 @@
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.0.3",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^2.0.22",
     "qs": "^6.11.1"
   }
