--- a/package.json
+++ b/package.json
@@ -15,18 +15,23 @@
     "axios": "^1.3.5",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.35.0",
+    "connect-redis": "^7.0.1",
+    "cookies-parser": "^1.2.0",
     "crypto": "^1.0.1",
     "date-format": "^4.0.14",
     "dateformat": "^5.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
-    "qs": "^6.11.1"
+    "qs": "^6.11.1",
+    "redis": "^4.6.5"
   }
 }
