--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "cloudinary": "^1.35.0",
     "connect-redis": "^7.0.1",
     "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "cookies-parser": "^1.2.0",
     "crypto": "^1.0.1",
     "date-format": "^4.0.14",
     "dateformat": "^5.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
