--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,8 @@
 {
     "version": 2,
-    "name": "music-album",
+    "name": "shoeshop-be",
     "builds": [
-       { "src": "app.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-       { "src": "/(.*)", "dest": "/app.js" }
+       { "src": "*.js", "use": "@vercel/node" }
     ]
+    
  }
