--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,9 @@
     "version": 2,
     "name": "shoeshop-be",
     "builds": [
-       { "src": "server.js", "use": "@vercel/node" }
+       { "src": "./server.js", "use": "@vercel/node" }
     ],
     "routes": [
-       { "src": "/(.*)", "dest": "/api/v1" }
+       { "src": "/(.*)", "dest": "/" }
     ]
  }
