--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "qs": "^6.11.1",
-    "redis": "^4.6.5"
+    "redis": "^4.6.5",
+    "socket.io": "^4.6.1"
   }
 }
